# video.debian.net

./: .gitattributes  .metamonger  LICENCE
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/: ABOUT-NLS  Makefile.am  Makefile.in  THANKS  TODO  config.h.in  config.sub  configure  index.html  install-sh  missing  mkinstalldirs
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/contrib/: ChangeLog  Makefile.in  de_franconian_po.txt  index.html
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/debian/: changelog  control  index.html  postinst  rules
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/doc/: ChangeLog  Makefile.in  gpl.texi  index.html  mdate-sh  version.texi
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/intl/: Makefile.in  VERSION  config.charset  dcgettext.c  dgettext.c  hash-string.h  index.html  l10nflist.c  libgnuintl.h  localealias.c  localename.c  os2compat.c  os2compat.h  plural-exp.c  ref-add.sin  ref-del.sin
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/m4/: ChangeLog  Makefile.am  Makefile.in  codeset.m4  gettext.m4  glibc21.m4  index.html  isc-posix.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  progtest.m4
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/man/: ChangeLog  Makefile.am  hello.1  index.html
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/po/: Makevars  POTFILES.in  ca.po  da.gmo  da.po  de.gmo  de_DE.po  el.po  en@boldquot.header  en@quot.header  es.gmo  et.gmo  et.po  fi.po  fr.gmo  fr.po  he.po  hello.pot  hr.gmo  hr.po  hu.gmo  id.po  index.html  it.gmo  it.po  ko.po  nl.gmo  nn.gmo  pt.po  quot.sed  sl.po  tr.po  uk.gmo  uk.po
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/src/: ChangeLog  Makefile.am  Makefile.in  getopt.c  getopt1.c  hello.c  index.html  system.h  version.c
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/tests/: Makefile.am  index.html  nothing-1  world-1
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  NEWS  aclocal.m4  config.guess  config.rpath  configure.ac  depcomp  index.html
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/contrib/: Makefile.am  evolution.txt  hello.1  index.html
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/debian/: changelog  control  copyright  hello.init  index.html  postinst  postrm  prerm  rules
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/doc/: Makefile.am  hello.info  hello.texi  index.html  stamp-vti  texinfo.tex
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/intl/: ChangeLog  bindtextdom.c  dcigettext.c  dcngettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  index.html  intl-compat.c  loadinfo.h  loadmsgcat.c  localcharset.c  locale.alias  ngettext.c  osdep.c  plural-exp.h  plural.c  plural.y  textdomain.c
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/m4/: iconv.m4  index.html  lcmessage.m4
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/man/: Makefile.in  hello.1  help2man  index.html
2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/po/: ChangeLog  LINGUAS  Makefile.in.in  Rules-quot  boldquot.sed  ca.gmo  de.po  de_DE.gmo  el.gmo  eo.gmo  eo.po  es.po  fi.gmo  gl.gmo  gl.po  he.gmo  hu.po  id.gmo  index.html  insert-header.sin  ja.gmo  ja.po  ko.gmo  lv.gmo  lv.po  nb.gmo  nb.po  nl.po  nn.po  pl.gmo  pl.po  pt.gmo  pt_BR.gmo  pt_BR.po  ru.gmo  (+8 more)
(+2974 files in other folders)
